fixed readme